bin_PROGRAMS = iviewiir
iviewiir_SOURCES = src/iviewiir.c \
		   src/iviewiir.h \
		   src/libiview/iview.h \
		   src/libiview/get_xml_buffer.c \
		   src/libiview/parse_config.c \
		   src/libiview/get_index.c \
		   src/libiview/parse_index.c \
		   src/libiview/get_series_items.c \
		   src/libiview/parse_series_items.c \
		   src/libiview/destroy_config.c \
		   src/libiview/destroy_index.c \
		   src/libiview/parse_auth.c \
		   src/xdg-user-dir-lookup.c \
		   src/libiview/generate_video_uri.c
