bin_PROGRAMS = iviewiir
iviewiir_SOURCES = iviewiir.c \
		   iviewiir.h \
		   libiview/iview.h \
		   libiview/get_xml_buffer.c \
		   libiview/parse_config.c \
		   libiview/get_index.c \
		   libiview/parse_index.c \
		   libiview/get_series_items.c \
		   libiview/parse_series_items.c \
		   libiview/destroy_config.c \
		   libiview/destroy_index.c \
		   libiview/parse_auth.c \
		   xdg-user-dir-lookup.c \
		   libiview/generate_video_uri.c \
		   libiview/fetch_video.c \
		   libiview/destroy_series_items.c
